--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="zh-CN">
 <head>
-<title>web前端简历</title>
+<title>简历</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1"><!-- 适配移动端设备 -->
@@ -36,20 +36,14 @@
 					</li>
 					<li>
 						<div>
-							<span class="icn"><img src="img/major.png"></span>
-							<p>专业: 美术与设计</p>
-						</div>
-					</li>
-					<li>
-						<div>
 							<span class="icn"><img src="img/map.png"></span>
-							<p>坐标: 南京</p>
+							<p>坐标: </p>
 						</div>
 					</li>
 					<li>
 						<div>
 							<span class="icn"><img src="img/code.png"></span>
-							<p>求职: 前端工程师</p>
+							<p>求职: java工程师</p>
 						</div>
 					</li>
 				</ul>
